# roc_the_saviour

./: .gitmodules  README.md
apriltags_ros/apriltags_ros/launch/: bluefox.launch  usb_cam.launch
aruco_mapping/data/: geniusF100.ini
aruco_mapping/launch/: aruco_mapping.launch
aruco_mapping/src/: aruco_mapping.cpp
aruco_ros/aruco_ros/launch/: double.launch  marker_publisher.launch  simple_n.launch  single.launch  usb_cam.launch
aruco_ros/aruco_ros/scripts/: aruco_mapper.py
aruco_ros/aruco_ros/src/: simple_n.cpp  simple_single.cpp
bluefox2/launch/: single_node.launch
controller/: CMakeLists.txt  package.xml
controller/include/: vin_mission_control.h
controller/launch/: controller.launch  frame.launch  vin_controller.launch  vin_mission_control.launch  vin_trajectory_track_controller.launch  vin_velocity_controller.launch
controller/param/: controller.yaml  controller1.yaml  vin_controller.yaml  vin_mission_control.yaml  vin_trajectory_track_controller.yaml  vin_velocity_controller.yaml
controller/scripts/: aruco_median_filter.py  aruco_transform.py  aruco_yaw.py  gripper.py  print_target_attitude.py  test_arucotag_time.py
controller/src/: a.cpp  b.cpp  back.cpp  controller.cpp  controller_april.cpp  controller_aruco.cpp  position_hold.cpp  position_hold_1.cpp  traj_controller.cpp  vin_controller.cpp  vin_mission_control.cpp  vin_px4_controller.cpp  vin_trajectory_track_controller.cpp  vin_velocity_controller.cpp
costmap_2d/launch/: costmap.yaml  planner.launch
gripper_control/: CMakeLists.txt  notes.txt  package.xml
gripper_control/launch/: position_control.launch  single_manager.launch  single_monitor.launch
gripper_control/scripts/: gripper.py
height_estimator/estimator/: CMakeLists.txt  README.md  package.xml
height_estimator/estimator/include/: kalman.h
height_estimator/estimator/launch/: zestimator.launch
height_estimator/estimator/src/: main.cpp
height_estimator/tfmini_ros/: README.md  package.xml
height_estimator/tfmini_ros/launch/: tfmini.launch
image_pipeline/depth_image_proc/launch/: test.launch
object_detection/aruco_ros/aruco_ros/: CMakeLists.txt
object_detection/aruco_ros/aruco_ros/launch/: bluefox.launch  simple_n.launch  usb_cam_loitr.launch  usb_cam_rect.launch
object_detection/aruco_ros/aruco_ros/src/: simple_n.cpp
object_detection/usb_cam/nodes/: .usb_cam_node.cpp.swp  usb_cam_node.cpp
tfmini_ros/: README.txt
tfmini_ros/launch/: tfmini.launch
usb_cam/launch/: usb_cam-test.launch  usb_cam-test1.launch
vi_sensor_unit/bluefox2/launch/: single_node.launch
vi_sensor_unit/ethzasl_xsens_driver/launch/: xsens_driver.launch
warehouse-quad/: CMakeLists.txt  README.md  package.xml
warehouse-quad/include/: kalman.h  sonar.h
warehouse-quad/launch/: zestimator.launch
warehouse-quad/src/: distance_sensor.cpp  ekf.cpp  lidar.cpp  main.cpp  sonar.cpp
